Agentforce/force-app/main/default/objects/Opportunity/fields/Adhoc_Revenue_Target__c.field-meta.xml
<CustomField>
    <fullName>Adhoc_Revenue_Target__c</fullName>
    <description>AD-901 - currency to capture the Adhoc Revenue Target</description>
    <label>Adhoc Revenue Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>