Agentforce/force-app/main/default/objects/Opportunity/fields/Aktrion_Solution__c.field-meta.xml
<CustomField>
    <fullName>Aktrion_Solution__c</fullName>
    <label>Aktrion Solution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Aktrion_Solution</valueSetName>
    </valueSet>
</CustomField>