Agentforce/force-app/main/default/objects/Opportunity/fields/Amount_Hidden__c.field-meta.xml
<CustomField>
    <fullName>Amount_Hidden__c</fullName>
    <description>AD-356 - amount field to stamp value of original currency amount (hidden from page layouts)</description>
    <label>Amount (Hidden)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>