Agentforce/force-app/main/default/objects/Opportunity/fields/Annual_Ad_hoc_GM__c.field-meta.xml
<CustomField>
    <fullName>Annual_Ad_hoc_GM__c</fullName>
    <description>AD-339 to see the In Year value for Contractual Products on an Opportunity</description>
    <label>Annual Ad-hoc GM</label>
    <summarizedField>OpportunityLineItem.Annual_Gross_Margin__c</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Service_Type__c</field>
        <operation>equals</operation>
        <value>Ad-hoc</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>