Agentforce/force-app/main/default/objects/Opportunity/fields/Annual_Ad_hoc_GMPercentage__c.field-meta.xml
<CustomField>
    <fullName>Annual_Ad_hoc_GMPercentage__c</fullName>
    <description>AD-339 to see the In Year value for Contractual Products on an Opportunity</description>
    <formula>IF(
  AND(
    Annual_Ad_hoc_Revenue__c &lt;&gt; 0,
    Annual_Ad_hoc_GM__c &lt;&gt; 0
  ),
  Annual_Ad_hoc_GM__c / Annual_Ad_hoc_Revenue__c,
  0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Ad-hoc GM%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>