Agentforce/force-app/main/default/objects/Opportunity/fields/Annual_GMPercentage__c.field-meta.xml
<CustomField>
    <fullName>Annual_GMPercentage__c</fullName>
    <description>AD-339 to see the In Year value for Contractual Products on an Opportunity</description>
    <formula>IF(AnnualGM__c &gt; 0.00,(AnnualGM__c/(Annual_Ad_hoc_Revenue__c + Annual_Contractual_Revenue__c +  Annual_Project_Revenue__c )), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual GM%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>