Agentforce/force-app/main/default/objects/Opportunity/fields/AnnualContractualGMPercentage__c.field-meta.xml
<CustomField>
    <fullName>AnnualContractualGMPercentage__c</fullName>
    <description>AD-339 to see the In Year value for Contractual Products on an Opportunity</description>
    <formula>IF(
  AND(
    Annual_Contractual_Revenue__c &lt;&gt; 0,
    Annual_Contractual_GM__c &lt;&gt; 0
  ),
  Annual_Contractual_GM__c / Annual_Contractual_Revenue__c,
  0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Contractual GM%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>