Agentforce/force-app/main/default/objects/Opportunity/fields/AnnualGM__c.field-meta.xml
<CustomField>
    <fullName>AnnualGM__c</fullName>
    <description>AD-339 to see the In Year value for Contractual Products on an Opportunity</description>
    <formula>Annual_Ad_hoc_GM__c + Annual_Contractual_GM__c + Annual_Project_GM__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual GM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>