Agentforce/force-app/main/default/objects/Opportunity/fields/Award_Date_On_Or_After_Contract_Start__c.field-meta.xml
<CustomField>
    <fullName>Award_Date_On_Or_After_Contract_Start__c</fullName>
    <description>True where the Award Date is on or after Contract Start Date</description>
    <formula>CloseDate  &gt;=  Contract_Start_Date__c</formula>
    <label>Award Date On Or After Contract Start</label>
    <type>Checkbox</type>
</CustomField>