Agentforce/force-app/main/default/objects/Opportunity/fields/Award_Date_Passed__c.field-meta.xml
<CustomField>
    <fullName>Award_Date_Passed__c</fullName>
    <formula>CloseDate &lt; TODAY()</formula>
    <label>Award Date Passed</label>
    <type>Checkbox</type>
</CustomField>