Agentforce/force-app/main/default/objects/Opportunity/fields/Bid__c.field-meta.xml
<CustomField>
    <fullName>Bid__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bid</label>
    <referenceTo>Bid__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>