Agentforce/force-app/main/default/objects/Opportunity/fields/Bid_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Bid_Approval_Status__c</fullName>
    <label>RFI Compliance Review Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Recalled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>