Agentforce/force-app/main/default/objects/Opportunity/fields/Bid_Exists__c.field-meta.xml
<CustomField>
    <fullName>Bid_Exists__c</fullName>
    <defaultValue>false</defaultValue>
    <description>AD-289 - checkbox used in flows to identify if a Bid record exists against an Opportunity</description>
    <label>Bid Exists</label>
    <type>Checkbox</type>
</CustomField>