Agentforce/force-app/main/default/objects/Opportunity/fields/Bid_Manager__c.field-meta.xml
<CustomField>
    <fullName>Bid_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field to lookup to the User who is the Bid Manager for the Opportunity</description>
    <label>Bid Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>