Agentforce/force-app/main/default/objects/Opportunity/fields/Bid_not_required__c.field-meta.xml
<CustomField>
    <fullName>Bid_not_required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>E2E - 24 Allow progression of an opportunity without the need for a Bid</description>
    <label>Bid not required</label>
    <type>Checkbox</type>
</CustomField>