Agentforce/force-app/main/default/objects/Opportunity/fields/Bid_SharePoint_URL__c.field-meta.xml
<CustomField>
    <fullName>Bid_SharePoint_URL__c</fullName>
    <label>Bid SharePoint URL</label>
    <type>Url</type>
</CustomField>