Agentforce/force-app/main/default/objects/Opportunity/fields/Bid_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Bid_Start_Date__c</fullName>
    <description>AD-303 Bid Start Date to be validated against the award date and the RFI/RFP dates</description>
    <inlineHelpText>The date you actively started pursuing this Opportunity</inlineHelpText>
    <label>Process Start Date</label>
    <type>Date</type>
</CustomField>