Agentforce/force-app/main/default/objects/Opportunity/fields/Bid_Team__c.field-meta.xml
<CustomField>
    <fullName>Bid_Team__c</fullName>
    <description>Picklist set by the user when requesting a Bid to determine which Bid Team notifications gets sent to once the Bid is approved.</description>
    <label>Bid Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Private</fullName>
            </value>
            <value>
                <fullName>Public</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>