Agentforce/force-app/main/default/objects/Opportunity/fields/Bid_Type__c.field-meta.xml
<CustomField>
    <fullName>Bid_Type__c</fullName>
    <label>Bid Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RFI &amp; RFP</fullName>
            </value>
            <value>
                <fullName>RFP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>