Agentforce/force-app/main/default/objects/Opportunity/fields/Bond_or_Third_Party_Guarantee__c.field-meta.xml
<CustomField>
    <fullName>Bond_or_Third_Party_Guarantee__c</fullName>
    <description>Whether the contract requires a bond or third party guarantee</description>
    <inlineHelpText>Whether the contract requires a bond or third party guarantee</inlineHelpText>
    <label>Bond or Third Party Guarantee</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>