Agentforce/force-app/main/default/objects/Opportunity/fields/CapEx__c.field-meta.xml
<CustomField>
    <fullName>CapEx__c</fullName>
    <description>AD-266 - currency field to capture the capital expenditure</description>
    <label>CapEx</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>