Agentforce/force-app/main/default/objects/Opportunity/fields/Clone_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Clone_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Clone Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities4</relationshipName>
    <type>Lookup</type>
</CustomField>