Agentforce/force-app/main/default/objects/Opportunity/fields/Close_Value__c.field-meta.xml
<CustomField>
    <fullName>Close_Value__c</fullName>
    <label>Close Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>