Agentforce/force-app/main/default/objects/Opportunity/fields/Close_Value_Rebid__c.field-meta.xml
<CustomField>
    <fullName>Close_Value_Rebid__c</fullName>
    <label>Close Value Rebid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>