Agentforce/force-app/main/default/objects/Opportunity/fields/Closed_Forecast_Category__c.field-meta.xml
<CustomField>
    <fullName>Closed_Forecast_Category__c</fullName>
    <description>Forecast Category as it was before closure</description>
    <label>Closed Forecast Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Omitted</fullName>
            </value>
            <value>
                <fullName>Pipeline</fullName>
            </value>
            <value>
                <fullName>Most Likely</fullName>
            </value>
            <value>
                <fullName>Best Case</fullName>
            </value>
            <value>
                <fullName>Commit</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>