Agentforce/force-app/main/default/objects/Opportunity/fields/Closed_Further_Details__c.field-meta.xml
<CustomField>
    <fullName>Closed_Further_Details__c</fullName>
    <label>Closed Further Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>