Agentforce/force-app/main/default/objects/Opportunity/fields/Closed_Last_12_Months__c.field-meta.xml
<CustomField>
    <fullName>Closed_Last_12_Months__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox used as criteria for Rollup Summaries since you cannot use Formulas containing Relative Dates (eg: TODAY). Checkbox set by Opportunity Before Create and Update Flow and Opportunity Scheduled Flow.</description>
    <label>Closed Last 12 Months</label>
    <type>Checkbox</type>
</CustomField>