Agentforce/force-app/main/default/objects/Opportunity/fields/Closed_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closed_Reason__c</fullName>
    <description>AD-281 The ability to capture the Lost/Withdrawn Reason on a Lost or Withdrawn Opportunity. The abilitiy to prompt the user with key questions for the Customer to ensure that &apos;Price&apos; isn&apos;t defaulted to as the root cause of Opportunity Losses.</description>
    <label>Closed Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sub_Stage__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Benchmarking</fullName>
            </value>
            <value>
                <fullName>Capability</fullName>
            </value>
            <value>
                <fullName>Closure</fullName>
            </value>
            <value>
                <fullName>Commitments</fullName>
            </value>
            <value>
                <fullName>Customer Withdrawn</fullName>
            </value>
            <value>
                <fullName>Duplicated</fullName>
            </value>
            <value>
                <fullName>ESG</fullName>
            </value>
            <value>
                <fullName>Geography</fullName>
            </value>
            <value>
                <fullName>Moved In-House</fullName>
            </value>
            <value>
                <fullName>Move to Global Deal</fullName>
            </value>
            <value>
                <fullName>Not in Strategy</fullName>
            </value>
            <value>
                <fullName>People</fullName>
            </value>
            <value>
                <fullName>Performance</fullName>
            </value>
            <value>
                <fullName>Postponed</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Quality</fullName>
            </value>
            <value>
                <fullName>Relationship</fullName>
            </value>
            <value>
                <fullName>Resource</fullName>
            </value>
            <value>
                <fullName>Risk Diversity</fullName>
            </value>
            <value>
                <fullName>Risk - Financial</fullName>
            </value>
            <value>
                <fullName>Risk - Reputation</fullName>
            </value>
            <value>
                <fullName>Size</fullName>
            </value>
            <value>
                <fullName>Solution</fullName>
            </value>
            <value>
                <fullName>Technology</fullName>
            </value>
            <value>
                <fullName>Terms &amp; Conditions</fullName>
            </value>
            <value>
                <fullName>Third Party</fullName>
            </value>
            <value>
                <fullName>Timeline - Long</fullName>
            </value>
            <value>
                <fullName>Timeline - Short</fullName>
            </value>
            <value>
                <fullName>Trade Unions</fullName>
            </value>
            <value>
                <fullName>Covid-19</fullName>
                <isActive>false</isActive>
                <label>Covid-19</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>