Agentforce/force-app/main/default/objects/Opportunity/fields/Closed_Stage__c.field-meta.xml
<CustomField>
    <fullName>Closed_Stage__c</fullName>
    <label>Closed Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2. Prospect</fullName>
            </value>
            <value>
                <fullName>3. Solution</fullName>
            </value>
            <value>
                <fullName>4. Post-Submission</fullName>
                <label>4. Post Submission</label>
            </value>
            <value>
                <fullName>5. Closed Withdrawn</fullName>
            </value>
            <value>
                <fullName>6. Closed Lost</fullName>
            </value>
            <value>
                <fullName>7. Closed Won</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>