Agentforce/force-app/main/default/objects/Opportunity/fields/Closed_Sub_Stage__c.field-meta.xml
<CustomField>
    <fullName>Closed_Sub_Stage__c</fullName>
    <description>Sub Stage when the Opportunity was updated to Closed</description>
    <label>Closed Sub Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2.1 Future Opportunity</fullName>
            </value>
            <value>
                <fullName>2.2 Needs Analysis</fullName>
            </value>
            <value>
                <fullName>2.3 Pursuing</fullName>
            </value>
            <value>
                <fullName>3.1 RFI In Progress</fullName>
            </value>
            <value>
                <fullName>3.2 RFI Submitted</fullName>
            </value>
            <value>
                <fullName>3.3 Develop Solution</fullName>
            </value>
            <value>
                <fullName>3.4 Solution Submitted</fullName>
            </value>
            <value>
                <fullName>4.1 Presentation</fullName>
            </value>
            <value>
                <fullName>4.2 Negotiation</fullName>
            </value>
            <value>
                <fullName>4.3 Verbal Acceptance</fullName>
            </value>
            <value>
                <fullName>5.1 OCS Withdrawn</fullName>
            </value>
            <value>
                <fullName>5.2 Customer Withdrawn</fullName>
            </value>
            <value>
                <fullName>6.1 Closed Lost</fullName>
            </value>
            <value>
                <fullName>7.1 Written Confirmation</fullName>
            </value>
            <value>
                <fullName>7.2 T&amp;Cs Signed</fullName>
            </value>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Team</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>