Agentforce/force-app/main/default/objects/Opportunity/fields/Colleague_Referral_Email__c.field-meta.xml
<CustomField>
    <fullName>Colleague_Referral_Email__c</fullName>
    <label>Colleague Referral Email</label>
    <type>Email</type>
</CustomField>