Agentforce/force-app/main/default/objects/Opportunity/fields/Commercial_Model__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Model__c</fullName>
    <label>Commercial Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fixed Contract</fullName>
            </value>
            <value>
                <fullName>Manpower</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>