Agentforce/force-app/main/default/objects/Opportunity/fields/Commission_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Commission_Eligible__c</fullName>
    <description>Identifies if Contract Terms, Incumbent, External Debrief exists and the Sub-Stage is 7.2 T&amp;Cs Signed.</description>
    <formula>AND(
    Contract_Signed__c = TRUE,
    Incumbent_Exists__c = TRUE,
    Contract_Terms_Exist__c  = TRUE,
    External_Debrief_Exists__c = TRUE
)</formula>
    <label>Commission Eligible</label>
    <type>Checkbox</type>
</CustomField>