Agentforce/force-app/main/default/objects/Opportunity/fields/Competitor_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Assigned__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Surfaces Competitor &apos;Account Role&apos; via flow</description>
    <label>Competitor Assigned</label>
    <type>Checkbox</type>
</CustomField>