Agentforce/force-app/main/default/objects/Opportunity/fields/Competitor_Description__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Description__c</fullName>
    <label>Competitor Description</label>
    <type>TextArea</type>
</CustomField>