Agentforce/force-app/main/default/objects/Opportunity/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the custom Contract object from an Opportunity</description>
    <label>Contract</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.AccountId</field>
            <operation>equals</operation>
            <valueField>Contract__c.Account__c</valueField>
        </filterItems>
        <filterItems>
            <field>Contract__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Terminated</value>
        </filterItems>
        <filterItems>
            <field>Contract__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Pending Termination</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contract__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>