Agentforce/force-app/main/default/objects/Opportunity/fields/Contract_In_Year_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Contract_In_Year_Revenue__c</fullName>
    <label>Contract In-Year Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>