Agentforce/force-app/main/default/objects/Opportunity/fields/Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>Contract_Number__c</fullName>
    <description>Contract Number from the Contract record. Used to avoid permission issues for the Opportunity Profile Card.</description>
    <formula>Contract__r.Name</formula>
    <label>Contract Number</label>
    <type>Text</type>
</CustomField>