Agentforce/force-app/main/default/objects/Opportunity/fields/Contract_Signed__c.field-meta.xml
<CustomField>
    <fullName>Contract_Signed__c</fullName>
    <description>Identify if Sub Stage is &apos;7.2 T&amp;Cs Signed&apos;</description>
    <formula>ISPICKVAL(Sub_Stage__c, &quot;7.2 T&amp;Cs Signed&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Signed</label>
    <type>Checkbox</type>
</CustomField>