Agentforce/force-app/main/default/objects/Opportunity/fields/Contract_Specification__c.field-meta.xml
<CustomField>
    <fullName>Contract_Specification__c</fullName>
    <description>Describes the Contract specification; Input [provides all requirements] or Output [provides end-state objectives]</description>
    <label>Contract Specification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Input</fullName>
            </value>
            <value>
                <fullName>Output</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>