Agentforce/force-app/main/default/objects/Opportunity/fields/Contract_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Start_Date__c</fullName>
    <description>AD-336 to be able to update the Start/Close Date without searching the page</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>