Agentforce/force-app/main/default/objects/Opportunity/fields/Contract_Term__c.field-meta.xml
<CustomField>
    <fullName>Contract_Term__c</fullName>
    <description>AD-283 The ability to ensure a Contact role is associated to an Opportunity if an Opportunity is created without a Lead</description>
    <label>Contract Term</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>